Fix overflowing

--- a/style.css
+++ b/style.css
@@ -26,26 +26,16 @@
 }
 
 .container {
-    width: 100vw;
+    max-width: 100vw;
     min-height: 100vh;
 
     display: flex;
     justify-content: center;
     align-items: center;
 
-    position: relative;
-}
-
-.bg-top {
-    position: absolute;
-    top: 0;
-    left: 0;
-}
-
-.bg-bottom {
-    position: absolute;
-    bottom: 0;
-    right: 0;
+    background-image: url(./images/bg-pattern-top-desktop.svg), url(./images/bg-pattern-bottom-desktop.svg);
+    background-position: left top, right bottom;
+    background-repeat: no-repeat;
 }
 
 .super-card {
@@ -68,6 +58,7 @@
     width: 50%;
     margin-bottom: 3rem;
     margin-right: 2rem;
+    position: relative;
 }
 
 .main-title h1 {
@@ -76,7 +67,7 @@
     margin-bottom: 1rem;
 }
 
-.main-title h2 {
+.main-title p {
     color: var(--dark-grayish-magenta);
     font-size: 1rem;
     font-weight: 400;
@@ -127,6 +118,7 @@
     min-height: 300px;
     display: flex;
     justify-content: space-between;
+    position: relative;
 }
 
 .card-comment {
@@ -167,28 +159,26 @@
     justify-content: center;
 }
 
-.comment-title .avatar-name h3{
+.comment-title .avatar-name{
     color: var(--white);
     font-size: .9rem;
     font-weight: 500;
     margin-bottom: 5px;
 }
 
-.comment-title .verified h4{
+.comment-title .verified{
     color: var(--soft-pink);
     font-size: .8rem;
     font-weight: 400;
 }
 
-
-.card-comment .comment-description p{
+blockquote {
     color: var(--white);
     font-size: .7rem;
     font-weight: 400;
     line-height: 25px;
 
     text-align: left;
-
 }
 
 @media (max-width: 1220px) {
@@ -276,12 +266,21 @@
 
 @media (max-width: 860px) {
 
+    .container {
+        background-image: url(./images/bg-pattern-top-mobile.svg), url(./images/bg-pattern-bottom-mobile.svg);
+    }
+
     .card-comment {
         width: 100%;
         flex-direction: column;
     }
 
+    .section-main {
+        display: block;
+    }
+
     .main-title {
+        display: block;
         width: 100%;
     }
 
@@ -290,20 +289,17 @@
         margin-bottom: 30px;
     }
 
+    .main-title p {
+        width: 100%;
+        text-align: center;
+    }
+
     .main-ratings {
         width: 100%;
     }
 
     .card-rate {
         width: 100%;
-    }
-
-    .bg-top {
-       content: url("./images/bg-pattern-top-mobile.svg"); 
-    }
-
-    .bg-bottom {
-        content: url("./images/bg-pattern-bottom-mobile.svg");
     }
 }
 
